--- a/config.org
+++ b/config.org
@@ -36,6 +36,7 @@
 - [[#multimedia][Multimedia]]
 - [[#touch-typing][Touch typing]]
 - [[#chronometer][chronometer]]
+- [[#islamic-prayer-times][Islamic prayer times]]
 
 * First step
 Copy all the dependencies from the emacs-29-deps folder into the Emacs installation binary folder. Needed for image inline display support on Windows.
@@ -637,6 +638,7 @@ The following settings are simple modes that are enabled (or disabled) so that E
   ;(scroll-bar-mode -1)         ;; Disable the scroll bar
   ;(tool-bar-mode -1)           ;; Disable the tool bar
   ;(setq org-edit-src-content-indentation 0) ;; Set src block automatic indent to 0 instead of 2.
+  (setq display-time-default-load-average nil)
 #+end_src
 
 #+begin_src emacs-lisp
@@ -740,6 +742,21 @@ The following settings are simple modes that are enabled (or disabled) so that E
   (use-package chronometer)
 #+end_src
 
+* Islamic prayer times
+
+#+begin_src emacs-lisp
+  (defun show-prayer-times ()
+  "Run the PowerShell Prayer Times script and display the output."
+  (interactive)
+  (let* ((script-path "C:/Users/rgj/Powershell_Prayer_Times.ps1") ;; Update this path if necessary
+         (output-buffer (get-buffer-create "*Prayer Times Output*"))
+         (output (shell-command-to-string (concat "powershell.exe -ExecutionPolicy Bypass -File " script-path))))
+    (with-current-buffer output-buffer
+      (erase-buffer) ;; Clear the buffer
+      (insert output) ;; Insert the output of the script
+      (goto-char (point-min))) ;; Move to the beginning of the buffer
+    (display-buffer output-buffer))) ;; Show the buffer
+#+end_src
 
 
 
