change git hunk in file

--- a/config.org
+++ b/config.org
@@ -556,7 +556,7 @@ Emacs has built-in programming language modes for Lisp, Scheme, DSSSL, Ada, ASM,
   (global-treesit-auto-mode))
 
 ;; ------------------------------
-;; Safe fringe click command
+;; Diff-HL Setup
 ;; ------------------------------
 (defun my/diff-hl-show-hunk-at-click (event)
   "Show the diff hunk at mouse click EVENT."
@@ -567,11 +567,26 @@ Emacs has built-in programming language modes for Lisp, Scheme, DSSSL, Ada, ASM,
 (use-package diff-hl
   :ensure t
   :config
+  ;; Enable globally
   (global-diff-hl-mode 1)
+  ;; Enable auto-refresh on file changes
   (diff-hl-flydiff-mode 1)
 
   ;; Make left-fringe clicks show hunk
-  (define-key diff-hl-mode-map [left-fringe mouse-1] #'my/diff-hl-show-hunk-at-click))
+  (define-key diff-hl-mode-map [left-fringe mouse-1] #'my/diff-hl-show-hunk-at-click)
+
+  ;; Automatically remove fringe indicators for files that are clean in Git
+  (defun my/diff-hl-clear-if-committed ()
+    "Clear diff-hl indicators for the current file if it's clean in Git."
+    (when (and (buffer-file-name)
+               (string= "" (string-trim
+                            (shell-command-to-string
+                             (format "git status --porcelain %s"
+                                     (shell-quote-argument (buffer-file-name)))))))
+      (diff-hl-update)))
+  
+  ;; Run after saving a file
+  (add-hook 'after-save-hook #'my/diff-hl-clear-if-committed))
 
 ;; ------------------------------
 ;; Shortcut to show hunk manually
