--- a/config.org
+++ b/config.org
@@ -42,7 +42,7 @@
   - [[#source-code-block-tag-expansion][Source Code Block Tag Expansion]]
   - [[#vlc][VLC]]
   - [[#org-pomodoro-1][org-pomodoro]]
-  - [[#eshell-new][eshell-new]]
+- [[#vterm][vterm]]
 - [[#drag-stuff][Drag-stuff.]]
 
 * First step
@@ -939,12 +939,22 @@ Org-tempo is a package that allows for '<s' followed by TAB to expand to a begin
   (global-set-key (kbd "C-c") vlc-mode-map)
 #+end_src
 
-** eshell-new
+
+* vterm
 #+begin_src emacs-lisp
-  (defun eshell-new ()
+(use-package vterm
+  :ensure t
+  :commands vterm
+  :config
+  (setq vterm-max-scrollback 10000)) ;; optional: bigger scrollback buffer
+
+(defun vterm-new ()
+  "Create a new vterm buffer with a unique name."
   (interactive)
-  (let ((eshell-buffer-name (generate-new-buffer-name "*eshell*")))
-    (eshell)))
+  (let ((vterm-buffer-name (generate-new-buffer-name "*vterm*")))
+    (vterm vterm-buffer-name)))
+
+(global-set-key (kbd "C-c t") #'vterm-new) ;; C-c t opens a new vterm
 #+end_src
 
 * Drag-stuff.
