--- a/config.org
+++ b/config.org
@@ -43,7 +43,7 @@
   - [[#vlc][VLC]]
   - [[#org-pomodoro-1][org-pomodoro]]
 - [[#vterm][vterm]]
-- [[#drag-stuff][Drag-stuff.]]
+- [[#drag-stuff][Drag-stuff]]
 
 * First step
 Copy all the dependencies from the emacs-29-deps folder into the Emacs installation binary folder. Needed for image inline display support on Windows.
@@ -575,6 +575,8 @@ Emacs has built-in programming language modes for Lisp, Scheme, DSSSL, Ada, ASM,
           (lambda ()
             (setq c-basic-offset 4)))
 
+  (setq lsp-idle-delay 0.1)
+  (setq lsp-diagnostics-provider :flymake)
 #+end_src
 
 #+begin_src emacs-lisp
@@ -966,7 +968,7 @@ Org-tempo is a package that allows for '<s' followed by TAB to expand to a begin
 (global-set-key (kbd "C-c t") #'vterm-new) ;; C-c t opens a new vterm
 #+end_src
 
-* Drag-stuff.
+* Drag-stuff
 Drag stuff is a minor mode for Emacs that makes it possible to drag stuff (words, region, lines) around in Emacs. When 'drag-stuff-define-keys' is enabled, then the following keybindings are set: M-up, M-down, M-left and M-right.
 
 #+begin_src emacs-lisp
